<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".CustomListActivity">

    <TextView
        android:id="@+id/nameTXT"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:onClick="onClick"
        android:text="@string/name" />

    <TextView
        android:id="@+id/phoneTXT"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:onClick="onClick"
        android:text="@string/phone" />

    <TextView
        android:id="@+id/addressTXT"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:onClick="onClick"
        android:text="@string/address" />

    <ImageView
        android:id="@+id/iconIMG"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/add"
        android:maxWidth="50dp"
        android:maxHeight="50dp"
        android:onClick="onClick"
        app:srcCompat="@drawable/ic_launcher_background" />
</LinearLayout>